--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
 
   <div class="bottom-container">
     <a class="footer-link" href="https://www.instagram.com/bahadil_shihai/">Instgram</a>
-    <a class="footer-link" href="https://twitter.com/mohimn.majid">Twitter</a>
+    <a class="footer-link" href="https://twitter.com/mohimn_majid">Twitter</a>
     <a class="footer-link" href="https://www.com-b.club/">Website</a>
     <p class="copyright">© 2021 MohimnMajid</p>
   </div>
